--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,16 +1,18 @@
 FROM node:20-alpine AS builder
 
-# Configurar variables de entorno para reducir el tamaño de npm
+# Update packages to fix potential vulnerabilities
+RUN apk update && apk upgrade --no-cache
+
+# Configurar variables de entorno
 ENV NPM_CONFIG_LOGLEVEL=warn
-ENV NODE_ENV=production
 
 WORKDIR /app
 
-# Copiar solo package.json y package-lock.json primero
+# Copiar package.json y package-lock.json
 COPY package*.json ./
 
-# Instalar dependencias con optimización de espacio
-RUN npm ci --only=production && npm cache clean --force
+# Instalar TODAS las dependencias, incluyendo devDependencies
+RUN npm install && npm cache clean --force
 
 # Copiar el código fuente
 COPY . .
@@ -21,11 +23,22 @@ RUN npm run build
 # Etapa de producción
 FROM node:20-alpine
 
+# Update packages to fix potential vulnerabilities
+RUN apk update && apk upgrade --no-cache
+
+# Configurar variables de entorno para producción
+ENV NODE_ENV=production
+
 WORKDIR /app
 
-# Copiar solo los archivos necesarios desde la etapa de construcción
+# Copiar package.json y package-lock.json
+COPY package*.json ./
+
+# Instalar solo dependencias de producción en la imagen final
+RUN npm install --only=production && npm cache clean --force
+
+# Copiar el código compilado desde la etapa de construcción
 COPY --from=builder /app/dist ./dist
-COPY --from=builder /app/node_modules ./node_modules
 
 # Exponer el puerto
 EXPOSE 3000
