--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,5 @@
-NODE_ENV=development
+NODE_ENV=production
 PORT=5000
 MONGO_URI=mongodb+srv://jairomoran01:DZ7IoRvkPXCfKOG3@cluster0.ue0hm.mongodb.net/clinica?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=tu_secreto_jwt
+VERCEL=true
